# foundry

./: .clang-format  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  RELEASE.md  ROADMAP.md  pyproject.toml  setup.py
csrc/: BinaryGraphIO.cpp  CUDAGraph.cpp  CUDAGraphParallel.cpp  binding.cpp  hook.cpp
docs/: overview.md
docs/sglang/: direct-edits.md  hooks.md  memory-consistency.md  memory-lifecycle.md  overview.md  save-load-workflow.md
docs/trtllm/: overview.md
docs/vllm/: direct-edits.md  hooks.md  memory-consistency.md  memory-lifecycle.md  moe-and-deepep.md  overview.md  save-load-workflow.md
include/: BinaryGraphFormat.h  CUDAGraph.h  CUDAGraphInternal.h  hook.h  metadata.h
python/foundry/: __init__.py  allocation_region.py  graph.py  ops.pyi
python/foundry/integration/: __init__.py
python/foundry/integration/sglang/: __init__.py  config.py  graph_ops.py  hooks.py  runtime.py
python/foundry/integration/trtllm/: __init__.py
python/foundry/integration/vllm/: __init__.py  config.py  graph_ops.py  hooks.py  moe.py  runtime.py
recipe/sglang/: README.md  foundry_load.toml  foundry_save.toml  serve_qwen3-1.7b_dp.sh  serve_qwen3-30ba3bfp8_ep.sh  serve_qwen3-mini.sh
recipe/trtllm/: README.md
recipe/vllm/: README.md  foundry_load.toml  foundry_save.toml  serve_qwen3-14b_dp.sh  serve_qwen3-30ba3b_ep.sh  serve_qwen3-30ba3bfp8_ep.sh  serve_qwen3-mini.sh
requirements/: lint.txt
tests/: test_async_load.py  test_deepep_fabric.py  test_imports.py  test_load_cublas_ws.py  test_load_graph.py  test_nvjet_graph.py  test_preallocation.py  test_stop_resume.py  test_vmm_alloc.py
tools/pre_commit/: check_spdx_header.py
