[build-system]
requires = [
    "setuptools>=80",
    "wheel",
    "cmake>=4.0",
    "ninja",
    "pytest",
    "torch==2.9.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "foundry"
version = "0.1.0"
description = "Foundry - CUDA Graph Extension"
requires-python = ">=3.10"
dependencies = [
    "torch",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools]
packages = [
    "foundry",
    "foundry.integration",
    "foundry.integration.vllm",
    "foundry.integration.sglang",
]
package-dir = {"" = "python"}
include-package-data = true
zip-safe = false

[tool.setuptools.package-data]
foundry = ["*.so"]
